<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Static Strings-->
    <string name="shared_preference_file">com.summoners.PREFERENCE_FILE_KEY</string>
    <string name="user_name">user_name</string>
    <string name="user_id">user_id</string>
    <string name="user_profile_icon_id">profile_icon_id</string>
    <string name="default_user_name">Not Set</string>
    <string name="api_key">ddb565ce-33ad-435f-ac6c-82882a99c6f6</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <!--URL Static strings-->
    <!-- %1$s, 1 is position in format, s is format-->
    <string name="dragon_url">http://ddragon.leagueoflegends.com/cdn/5.8.1/img/%1$s/%2$d.png</string>
    <string name="profile_icon">profileicon</string>

    <!--Home Page String-->
    <string name="get_started">Get Started</string>
    <string name="get_started_intro">Customize your home page by\nadding your summoner name.</string>
    <string name="update">Update</string>
    <string name="user_name_hint">Summoner Name</string>

    <!--View Pager Strings-->
    <string name="ranked">Ranked</string>
    <string name="empty_ranked"> There seems to be no ranked \n activity for this user.</string>

    <!-- Search Strings-->
    <string name="summoner_search">Summoner Search</string>

    <!--Ranked Strings-->
    <string name="league_points">League Points:</string>
    <string name="wins">Wins:</string>
    <string name="losses">Losses:</string>
    <string name="hot_streak">Hot Streak</string>
    <string name="veteran">Veteran</string>
    <string name="inactive">Inactive</string>
    <string name="fresh_blood">Fresh Blood</string>
    <string name="loading_ranked">Your information is \n being loaded.</string>

    <!-- Game Strings-->
    <string name="kills_death_assist">%1$d/%2$d/%3$d</string>
    <string name="victory">Victory</string>
    <string name="defeat">Defeat</string>
    <string name="barons">Barons:</string>
    <string name="dragons">Dragons:</string>
    <string name="towers">Towers:</string>
    <string name="rift_heralds">Rift Heralds:</string>


    <!--Settings Fragment-->
    <string name="clear_user_title">Clear User Profile</string>
    <string name="clear_user_desc">Are you sure you want to clear your profile?</string>

    <!--Old Strings-->
    <string name="app_name">Summoner Search</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_summoner_info_pager">SummonerInfoPagerActivity</string>
    <string name="title_activity_info_pager">InfoPagerActivity</string>
    <string name="title_section1">General Info</string>
    <string name="title_section2">Ranked Info</string>
    <string name="title_section3">Recent Games</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_rank">Current Rank:</string>
    <string name="series_progress">Series Progress:</string>
    <string name="not_available">N/A</string>

    <!--Menu Strings-->
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

</resources>
