<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.league2.app.Fragments.GeneralInfoFragment"
    android:background="#b5842f">


    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:background="#98aaad">

        <TextView
            android:id="@+id/summoner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingTop="5dp"
            android:typeface="serif"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>


        <RelativeLayout
            android:id="@+id/rank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <TextView
                style="@style/AppTheme.GeneralPlacementText"
                android:text="@string/current_rank"/>

            <TextView
                style="@style/AppTheme.GeneralInfoText"
                android:id="@+id/current_rank"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp">

            <TextView
                style="@style/AppTheme.GeneralPlacementText"
                android:text="@string/league_points"/>

            <TextView
                style="@style/AppTheme.GeneralInfoText"
                android:id="@+id/league_points"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp">

            <TextView
                style="@style/AppTheme.GeneralPlacementText"
                android:text="@string/series_progress"/>

            <TextView
                style="@style/AppTheme.GeneralInfoText"
                android:id="@+id/progress"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/league_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp">

            <TextView
                style="@style/AppTheme.GeneralPlacementText"
                android:text="@string/series_progress"/>

            <TextView
                style="@style/AppTheme.GeneralInfoText"
                android:id="@+id/name_of_league"/>

        </RelativeLayout>

    </LinearLayout>
</FrameLayout>
